<resources>
    <string name="app_name">Fidel</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="start">Démarrer !</string>
    <string name="cancel">Annuler</string>
    <string name="valider">Valider</string>
    <string name="enterNumRes">Numéro de réservation</string>

    <string name="title_activity_sign_up">Inscription</string>
    <string name="title_activity_forbidden_list">Objets interdits</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_weight_luggage">Poids autorisés</string>
    <string name="title_activity_size_luggage">Tailles autorisées</string>
    <string name="title_activity_process">Embarquement</string>
    <string name="title_activity_ticket">Vos tickets</string>
    <string name="title_activity_my_luggages">Vos bagages</string>
    <string name="title_activity_shopping">Achats</string>
    <string name="title_activity_connect">Connexion</string>

    <string name="login">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="signUp">S\'inscrire</string>
    <string name="passwordbis">Retaper votre mot de passe</string>
    <string name="inscrNumRes">N° réservation</string>
    <string name="email">Email</string>
    <string name="wallet">Credit disponible</string>
    <string name="emptyField">Il faut remplir tous les champs</string>
    <string name="emptyOneField">Il faut remplir au moins un champ</string>
    <string name="textLogo">idel</string>
    <string name="passwordNotEquals">Vous devez entrer deux fois le même mot de passe</string>
    <string name="welcom">Bienvenue</string>
    <string name="number">Réservation N°</string>
    <string name="disconnect">Deconnexion</string>
    <string name="giveUp">Abandonner</string>
    <string name="emptyNumVol">Il faut entrer un numéro réservation</string>
    <string name="waitBuy">Attente d\'un achat</string>
    <string name="nbrValise">Nombre de valises en soute</string>
    <string name="poidsValise">Poids par valise en soute</string>
    <string name="poidsCabin">Poids du bagage à main</string>
    <string name="finish">Terminer</string>
    <string name="NoLuggagesDetected">Pas de bagage enregistré</string>

    <string name="no_data_to_display">Rien à afficher</string>
    <string name="total">Total :</string>
    <string name="changeData">Changer vos données</string>
    <string name="ValiderNewData">Valider les nouvelles données ?</string>
    <string name="enterNbr">Code d\'achat</string>
    <string name="labelReservationNumber">"Réservation N° :"</string>
    <string name="labelDateReservation">"Date de réservation :"</string>
    <string name="labelTypeBillet">"Billet(s) de classe :"</string>
    <string name="labelTypeVol">"Vol de type :"</string>
    <string name="validBuy">Achat effectué !</string>
    <string name="labelGate">Porte N° :</string>
    <string name="labelHArrivee">Heure d\'arrivée :</string>
    <string name="labelHEmbarquement">Heure d\'embarquement :</string>
    <string name="labelHDepart">Heure de départ :</string>
</resources>
