<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                tools:context="com.fidel.fidel.activities.SignUpActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/valider"
        android:id="@+id/ValiderButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_above="@id/inscriptionButton"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:paddingLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:id="@+id/userLogin"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="@color/primary_text"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordbis"
                android:textSize="20dp"
                android:textColor="@color/primary_text"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/userPasswordBis"
                android:inputType="textPassword"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inscrNumRes"
                android:textSize="20dp"
                android:textColor="@color/primary_text"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inscrNumRes"
                android:id="@+id/userNumRes"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20dp"
                android:textColor="@color/primary_text"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/userEmail"
                android:layout_marginBottom="25dp"
                android:inputType="textEmailAddress"
                android:paddingBottom="100dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
