<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.fidel.fidel.activities.UserProfileActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Vos données"
        android:background="#ff009688"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="30sp"
        android:id="@+id/title"
        android:textColor="#ffffffff"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/title"
        android:layout_margin="24dp"
        android:id="@+id/layout1"
        android:weightSum="2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/login"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:layout_weight="1"
            android:id="@+id/getLogin"
            android:visibility="visible"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/setLogin"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:weightSum="2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/email"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:layout_weight="1"
            android:id="@+id/getEmail"
            android:visibility="visible"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/setEmail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:id="@+id/layout3"
        android:layout_below="@+id/layout2"
        android:weightSum="3"
        android:visibility="visible">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/wallet"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:layout_weight="2"
            android:id="@+id/getWallet"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:id="@+id/layout4"
        android:layout_below="@+id/layout2"
        android:weightSum="3"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/password"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/setPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:id="@+id/layout5"
        android:layout_below="@+id/layout4"
        android:weightSum="3"
        android:visibility="gone">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/primary_text"
            android:text="@string/passwordbis"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/setPasswordBis"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/changeData"
        android:id="@+id/changeDataButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/MenuButton"
        android:text="@string/ValiderNewData"
        android:id="@+id/ValiderNewData"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>


</RelativeLayout>
